--- a/index.html
+++ b/index.html
@@ -76,30 +76,29 @@ h1{text-shadow:0 0 12px cyan;font-size:2.6em}
 </div>
 
 <div class="menu" id="menu">
-<a href="index.html">halaman 1</a>
-<a href="halaman2.html">halaman 2</a>
-<a href="halaman3.html">halaman 3</a>
+<a href="index.html">Menu Awal</a>
+<a href="halaman2.html">Lagu Galau/sad</a>
+<a href="halaman3.html">Lagu Dj/remix</a>
 <a href="halaman4.html">tentang kami</a>
 </div>
 
-<h1>audio play test</h1>
+<h1>My music</h1>
 <p class="desc">
-halaman utama untuk uji tampilan dan konsep audio player  
-menggunakan kartu visual rasio 1:1 sebelum masuk koleksi lagu
+Selamat datang di platform My Music,disini kalian bebas menggunakan music tanpa harus membayar 
 </p>
 
 <div class="audio-test">
 <div class="card">
 <img src="image/test1.jpg">
-<p>preview audio 1</p>
+<p>Kenapa Harus memilih My music?,karena my music adalah sebuah platform music yang gratis tanpa iklan dan tanpa biaya sepersen pun😁.</p>
 </div>
 <div class="card">
 <img src="image/test2.jpg">
-<p>preview audio 2</p>
+<p>Kami menyediakan beberapa music populer pada saat ini,dan kami juga menyediakan beberapa music yang populer pada zaman dulu.</p>
 </div>
 <div class="card">
 <img src="image/test3.jpg">
-<p>preview audio 3</p>
+<p>Kami menyediakan tempat request music untuk di pajang di platform ini agar kalian dapat dengan mudah menggunakan music tanpa kesusahan lagi.</p>
 </div>
 </div>
 
