--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ h1{text-shadow:0 0 12px cyan;font-size:2.6em}
 
 <div class="menu" id="menu">
 <a href="index.html" onclick="closeMenu()">Menu Awal</a>
-<a href="halaman2.html" onclick="closeMenu()">Lagu Galau/sad</a>
-<a href="halaman3.html" onclick="closeMenu()">Lagu Dj/remix</a>
+<a href="halaman2.html" onclick="closeMenu()">Lagu Dj/Happy</a>
+<a href="halaman3.html" onclick="closeMenu()">Lagu Galau/sad</a>
 <a href="halaman4.html" onclick="closeMenu()">tentang kami</a>
 </div>
 
