--- a/halaman2.html
+++ b/halaman2.html
@@ -200,8 +200,8 @@ button{
 
 <div class="menu" id="menu">
 <a href="index.html" onclick="closeMenu()">menu awal</a>
-<a href="halaman2.html" onclick="closeMenu()">lagu galau</a>
-<a href="halaman3.html" onclick="closeMenu()">lagu dj</a>
+<a href="halaman2.html" onclick="closeMenu()">lagu dj/Happy</a>
+<a href="halaman3.html" onclick="closeMenu()">lagu galau/sad</a>
 <a href="halaman4.html" onclick="closeMenu()">tentang kami</a>
 </div>
 
@@ -222,9 +222,9 @@ button{
 </div>
 
 <div class="container song">
-<img src="image/lagu2.jpg">
+<img src="image/wuchuantianjia.jpg">
 <h3>judul lagu 2</h3>
-<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<audio id="audio2" src="audio/wu cuan tian jia.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
 
