--- a/halaman2.html
+++ b/halaman2.html
@@ -224,7 +224,7 @@ button{
 <div class="container song">
 <img src="image/wuchuantianjia.jpg">
 <h3>judul lagu 2</h3>
-<audio id="audio2" src="audio/wu cuan tian jia.mp3"></audio>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
 
