--- a/halaman2.html
+++ b/halaman2.html
@@ -216,14 +216,14 @@ button{
 
 <div class="container song">
 <img src="image/ngapainrepot.jpg">
-<h3>judul lagu 1</h3>
+<h3>Ngapain Repot  by Toton Caribo, Wizz Baker, dan Fresly Nikijuluw</h3>
 <audio id="audio1" src="audio/ngapainrepot.mp3"></audio>
 <button onclick="togglePlay(1)"><div class="play-icon"></div></button>
 </div>
 
 <div class="container song">
 <img src="image/wuchuantianjia.jpg">
-<h3>judul lagu 2</h3>
+<h3> Wu Chuan Tian Jia by Teresa Teng </h3>
 <audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
