--- a/halaman2.html
+++ b/halaman2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>koleksi lagu</title>
+<title>lagu happy🐯</title>
 
 <style>
 body{
